// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSuggest is rendered 1`] = `
Array [
  <div
    class="euiSelectable euiSelectable-fullHeight"
  >
    <div
      class="euiPopover euiInputPopover euiInputPopover--fullWidth euiInputPopover euiInputPopover--fullWidth css-fwe1lp-euiPopover-EuiPopoverClass"
    >
      <div
        class="euiPopover__anchor css-4fdlpz-EuiPopoverClass"
      >
        <div>
          <div
            class="euiFormControlLayout euiFormControlLayout--fullWidth"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-activedescendant=""
                aria-haspopup="listbox"
                aria-label="aria-label"
                autocomplete="off"
                class="euiFieldSearch euiFieldSearch--fullWidth euiSelectableSearch testClass1 testClass2"
                data-test-subj="test subject string"
                placeholder="Filter options"
                type="search"
                value=""
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="search"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <p
    class="euiScreenReaderOnly"
    id="generated-id"
  >
    State: unchanged.
  </p>,
]
`;

exports[`EuiSuggest props append 1`] = `
Array [
  <div
    class="euiSelectable euiSelectable-fullHeight"
  >
    <div
      class="euiPopover euiInputPopover euiInputPopover--fullWidth euiInputPopover euiInputPopover--fullWidth css-fwe1lp-euiPopover-EuiPopoverClass"
    >
      <div
        class="euiPopover__anchor css-4fdlpz-EuiPopoverClass"
      >
        <div>
          <div
            class="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--group"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-activedescendant=""
                aria-haspopup="listbox"
                aria-label="aria-label"
                autocomplete="off"
                class="euiFieldSearch euiFieldSearch--fullWidth euiFieldSearch--inGroup euiSelectableSearch testClass1 testClass2"
                data-test-subj="test subject string"
                placeholder="Filter options"
                type="search"
                value=""
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="search"
                  />
                </span>
              </div>
            </div>
            <span
              class="euiFormControlLayout__append"
            >
              Appended
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <p
    class="euiScreenReaderOnly"
    id="generated-id"
  >
    State: unchanged.
  </p>,
]
`;

exports[`EuiSuggest props isVirtualized 1`] = `
<EuiSuggest
  aria-label="aria-label"
  className="testClass1 testClass2"
  data-test-subj="test subject string"
  isVirtualized={true}
  suggestions={
    Array [
      Object {
        "description": "Description",
        "label": "Field sample",
        "type": Object {
          "color": "tint4",
          "iconType": "kqlField",
        },
      },
      Object {
        "description": "Description",
        "label": "Value sample",
        "type": Object {
          "color": "tint0",
          "iconType": "kqlValue",
        },
      },
    ]
  }
>
  <EuiSelectable
    isPreFiltered={false}
    listProps={
      Object {
        "bordered": false,
        "isVirtualized": true,
        "onFocusBadge": false,
        "paddingSize": "none",
        "showIcons": false,
        "textWrap": "truncate",
      }
    }
    onChange={[Function]}
    options={
      Array [
        Object {
          "className": "euiSuggestItemOption",
          "data": Object {
            "description": "Description",
            "label": "Field sample",
            "type": Object {
              "color": "tint4",
              "iconType": "kqlField",
            },
          },
          "label": "Field sample",
          "truncate": true,
        },
        Object {
          "className": "euiSuggestItemOption",
          "data": Object {
            "description": "Description",
            "label": "Value sample",
            "type": Object {
              "color": "tint0",
              "iconType": "kqlValue",
            },
          },
          "label": "Value sample",
          "truncate": true,
        },
      ]
    }
    renderOption={[Function]}
    searchProps={
      Object {
        "append": undefined,
        "aria-describedby": "generated-id",
        "aria-label": "aria-label",
        "aria-labelledby": undefined,
        "className": "testClass1 testClass2",
        "data-test-subj": "test subject string",
        "fullWidth": true,
        "id": undefined,
        "isLoading": false,
        "onBlur": [Function],
        "onChange": [Function],
        "onFocus": [Function],
        "onInput": [Function],
      }
    }
    searchable={true}
    singleSelection={true}
  >
    <div
      className="euiSelectable"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
    >
      <EuiInputPopover
        anchorPosition="downLeft"
        attachToAnchor={true}
        className="euiInputPopover euiInputPopover--fullWidth"
        closePopover={[Function]}
        disableFocusTrap={true}
        display="block"
        fullWidth={true}
        input={
          <React.Fragment>
            <EuiI18n
              default="Filter options"
              token="euiSelectable.placeholderName"
            >
              [Function]
            </EuiI18n>
          </React.Fragment>
        }
        isOpen={false}
        panelPaddingSize="none"
        panelProps={
          Object {
            "aria-live": undefined,
            "aria-modal": false,
            "role": undefined,
          }
        }
        panelRef={[Function]}
      >
        <EuiPopover
          anchorPosition="downLeft"
          attachToAnchor={true}
          button={
            <EuiResizeObserver
              onResize={[Function]}
            >
              [Function]
            </EuiResizeObserver>
          }
          buttonRef={[Function]}
          className="euiInputPopover euiInputPopover--fullWidth euiInputPopover euiInputPopover--fullWidth"
          closePopover={[Function]}
          display="block"
          isOpen={false}
          ownFocus={false}
          panelPaddingSize="none"
          panelProps={
            Object {
              "aria-live": undefined,
              "aria-modal": false,
              "role": undefined,
            }
          }
          panelRef={[Function]}
        >
          <EuiPopoverClass
            anchorPosition="downLeft"
            attachToAnchor={true}
            button={
              <EuiResizeObserver
                onResize={[Function]}
              >
                [Function]
              </EuiResizeObserver>
            }
            buttonRef={[Function]}
            className="euiInputPopover euiInputPopover--fullWidth euiInputPopover euiInputPopover--fullWidth"
            closePopover={[Function]}
            display="block"
            hasArrow={true}
            isOpen={false}
            ownFocus={false}
            panelPaddingSize="none"
            panelProps={
              Object {
                "aria-live": undefined,
                "aria-modal": false,
                "role": undefined,
              }
            }
            panelRef={[Function]}
            theme={
              Object {
                "colorMode": "LIGHT",
                "euiTheme": Object {
                  "animation": Object {
                    "bounce": "cubic-bezier(.34, 1.61, .7, 1)",
                    "extraFast": "90ms",
                    "extraSlow": "500ms",
                    "fast": "150ms",
                    "normal": "250ms",
                    "resistance": "cubic-bezier(.694, .0482, .335, 1)",
                    "slow": "350ms",
                  },
                  "base": 16,
                  "border": Object {
                    "color": "#D3DAE6",
                    "editable": "2px dotted #D3DAE6",
                    "radius": Object {
                      "medium": "6px",
                      "small": "4px",
                    },
                    "thick": "2px solid #D3DAE6",
                    "thin": "1px solid #D3DAE6",
                    "width": Object {
                      "thick": "2px",
                      "thin": "1px",
                    },
                  },
                  "breakpoint": Object {
                    "l": 992,
                    "m": 768,
                    "s": 575,
                    "xl": 1200,
                    "xs": 0,
                  },
                  "colors": Object {
                    "accent": "#F04E98",
                    "accentText": "#ba3d76",
                    "body": "#f7f8fc",
                    "danger": "#BD271E",
                    "dangerText": "#bd271e",
                    "darkShade": "#69707D",
                    "darkestShade": "#343741",
                    "disabled": "#ABB4C4",
                    "disabledText": "#a2abba",
                    "emptyShade": "#FFF",
                    "fullShade": "#000",
                    "ghost": "#FFF",
                    "highlight": "#fff9e8",
                    "ink": "#000",
                    "lightShade": "#D3DAE6",
                    "lightestShade": "#F1F4FA",
                    "link": "#006bb8",
                    "mediumShade": "#98A2B3",
                    "primary": "#07C",
                    "primaryText": "#006bb8",
                    "shadow": "#000",
                    "subduedText": "#646a77",
                    "success": "#00BFB3",
                    "successText": "#007871",
                    "text": "#343741",
                    "title": "#1a1c21",
                    "warning": "#FEC514",
                    "warningText": "#83650a",
                  },
                  "focus": Object {
                    "color": "currentColor",
                    "width": "2px",
                  },
                  "font": Object {
                    "baseline": 4,
                    "body": Object {
                      "scale": "s",
                      "weight": "regular",
                    },
                    "family": "'Inter', BlinkMacSystemFont, Helvetica, Arial, sans-serif",
                    "familyCode": "'Roboto Mono', Menlo, Courier, monospace",
                    "familySerif": "Georgia, Times, Times New Roman, serif",
                    "featureSettings": "'calt' 1, 'kern' 1, 'liga' 1",
                    "lineHeightMultiplier": 1.5,
                    "scale": Object {
                      "l": 1.375,
                      "m": 1,
                      "s": 0.875,
                      "xl": 1.6875,
                      "xs": 0.75,
                      "xxl": 2.125,
                      "xxs": 0.6875,
                      "xxxs": 0.5625,
                    },
                    "title": Object {
                      "weight": "bold",
                    },
                    "weight": Object {
                      "bold": 700,
                      "light": 300,
                      "medium": 500,
                      "regular": 400,
                      "semiBold": 600,
                    },
                  },
                  "levels": Object {
                    "content": 0,
                    "flyout": 1000,
                    "header": 1000,
                    "mask": 6000,
                    "maskBelowHeader": 1000,
                    "menu": 2000,
                    "modal": 8000,
                    "navigation": 6000,
                    "toast": 9000,
                  },
                  "size": Object {
                    "base": "16px",
                    "l": "24px",
                    "m": "12px",
                    "s": "8px",
                    "xl": "32px",
                    "xs": "4px",
                    "xxl": "40px",
                    "xxs": "2px",
                    "xxxl": "48px",
                    "xxxxl": "64px",
                  },
                  "themeName": "EUI_THEME_AMSTERDAM",
                },
                "modifications": Object {},
              }
            }
          >
            <EuiOutsideClickDetector
              onOutsideClick={[Function]}
            >
              <div
                css="unknown styles"
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
              >
                <Insertion
                  cache={
                    Object {
                      "insert": [Function],
                      "inserted": Object {
                        "192zz00-euiLoadingSpinner-m": true,
                        "4fdlpz-EuiPopoverClass": true,
                        "animation-c24ia8": true,
                        "fwe1lp-euiPopover-EuiPopoverClass": true,
                      },
                      "key": "css",
                      "nonce": undefined,
                      "registered": Object {},
                      "sheet": StyleSheet {
                        "_alreadyInsertedOrderInsensitiveRule": true,
                        "_insertTag": [Function],
                        "before": null,
                        "container": <head>
                          <style
                            data-emotion="css"
                            data-s=""
                          >
                            
                            .css-fwe1lp-euiPopover-EuiPopoverClass{position:relative;vertical-align:middle;max-width:100%;display:block;}
                          </style>
                          <style
                            data-emotion="css"
                            data-s=""
                          >
                            
                            .css-4fdlpz-EuiPopoverClass{display:block;}
                          </style>
                          <style
                            data-emotion="css"
                            data-s=""
                          >
                            
                            .css-192zz00-euiLoadingSpinner-m{-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;display:inline-block;border-radius:50%;border:2px solid #D3DAE6;border-color:#07C #D3DAE6 #D3DAE6 #D3DAE6;width:16px;height:16px;border-width:calc(1px * 1.5);}
                          </style>
                          <style
                            data-emotion="css"
                            data-s=""
                          >
                            
                            @media screen and (prefers-reduced-motion: no-preference){.css-192zz00-euiLoadingSpinner-m{-webkit-animation:animation-c24ia8 0.6s infinite linear;animation:animation-c24ia8 0.6s infinite linear;}}
                          </style>
                          <style
                            data-emotion="css"
                            data-s=""
                          >
                            
                            @-webkit-keyframes animation-c24ia8{from{-webkit-transform:rotate(0deg);-moz-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(359deg);-moz-transform:rotate(359deg);-ms-transform:rotate(359deg);transform:rotate(359deg);}}
                          </style>
                          <style
                            data-emotion="css"
                            data-s=""
                          >
                            
                            @keyframes animation-c24ia8{from{-webkit-transform:rotate(0deg);-moz-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(359deg);-moz-transform:rotate(359deg);-ms-transform:rotate(359deg);transform:rotate(359deg);}}
                          </style>
                        </head>,
                        "ctr": 6,
                        "insertionPoint": undefined,
                        "isSpeedy": false,
                        "key": "css",
                        "nonce": undefined,
                        "prepend": undefined,
                        "tags": Array [
                          <style
                            data-emotion="css"
                            data-s=""
                          >
                            
                            .css-fwe1lp-euiPopover-EuiPopoverClass{position:relative;vertical-align:middle;max-width:100%;display:block;}
                          </style>,
                          <style
                            data-emotion="css"
                            data-s=""
                          >
                            
                            .css-4fdlpz-EuiPopoverClass{display:block;}
                          </style>,
                          <style
                            data-emotion="css"
                            data-s=""
                          >
                            
                            .css-192zz00-euiLoadingSpinner-m{-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;display:inline-block;border-radius:50%;border:2px solid #D3DAE6;border-color:#07C #D3DAE6 #D3DAE6 #D3DAE6;width:16px;height:16px;border-width:calc(1px * 1.5);}
                          </style>,
                          <style
                            data-emotion="css"
                            data-s=""
                          >
                            
                            @media screen and (prefers-reduced-motion: no-preference){.css-192zz00-euiLoadingSpinner-m{-webkit-animation:animation-c24ia8 0.6s infinite linear;animation:animation-c24ia8 0.6s infinite linear;}}
                          </style>,
                          <style
                            data-emotion="css"
                            data-s=""
                          >
                            
                            @-webkit-keyframes animation-c24ia8{from{-webkit-transform:rotate(0deg);-moz-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(359deg);-moz-transform:rotate(359deg);-ms-transform:rotate(359deg);transform:rotate(359deg);}}
                          </style>,
                          <style
                            data-emotion="css"
                            data-s=""
                          >
                            
                            @keyframes animation-c24ia8{from{-webkit-transform:rotate(0deg);-moz-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(359deg);-moz-transform:rotate(359deg);-ms-transform:rotate(359deg);transform:rotate(359deg);}}
                          </style>,
                        ],
                      },
                    }
                  }
                  isStringTag={true}
                  serialized={
                    Object {
                      "map": undefined,
                      "name": "fwe1lp-euiPopover-EuiPopoverClass",
                      "next": undefined,
                      "styles": "position:relative;vertical-align:middle;max-width:100%;label:euiPopover;;;display: block;label:EuiPopoverClass;;;",
                      "toString": [Function],
                    }
                  }
                />
                <div
                  className="euiPopover euiInputPopover euiInputPopover--fullWidth euiInputPopover euiInputPopover--fullWidth css-fwe1lp-euiPopover-EuiPopoverClass"
                  onKeyDown={[Function]}
                  onMouseDown={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                >
                  <div
                    css="unknown styles"
                  >
                    <Insertion
                      cache={
                        Object {
                          "insert": [Function],
                          "inserted": Object {
                            "192zz00-euiLoadingSpinner-m": true,
                            "4fdlpz-EuiPopoverClass": true,
                            "animation-c24ia8": true,
                            "fwe1lp-euiPopover-EuiPopoverClass": true,
                          },
                          "key": "css",
                          "nonce": undefined,
                          "registered": Object {},
                          "sheet": StyleSheet {
                            "_alreadyInsertedOrderInsensitiveRule": true,
                            "_insertTag": [Function],
                            "before": null,
                            "container": <head>
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                .css-fwe1lp-euiPopover-EuiPopoverClass{position:relative;vertical-align:middle;max-width:100%;display:block;}
                              </style>
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                .css-4fdlpz-EuiPopoverClass{display:block;}
                              </style>
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                .css-192zz00-euiLoadingSpinner-m{-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;display:inline-block;border-radius:50%;border:2px solid #D3DAE6;border-color:#07C #D3DAE6 #D3DAE6 #D3DAE6;width:16px;height:16px;border-width:calc(1px * 1.5);}
                              </style>
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                @media screen and (prefers-reduced-motion: no-preference){.css-192zz00-euiLoadingSpinner-m{-webkit-animation:animation-c24ia8 0.6s infinite linear;animation:animation-c24ia8 0.6s infinite linear;}}
                              </style>
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                @-webkit-keyframes animation-c24ia8{from{-webkit-transform:rotate(0deg);-moz-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(359deg);-moz-transform:rotate(359deg);-ms-transform:rotate(359deg);transform:rotate(359deg);}}
                              </style>
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                @keyframes animation-c24ia8{from{-webkit-transform:rotate(0deg);-moz-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(359deg);-moz-transform:rotate(359deg);-ms-transform:rotate(359deg);transform:rotate(359deg);}}
                              </style>
                            </head>,
                            "ctr": 6,
                            "insertionPoint": undefined,
                            "isSpeedy": false,
                            "key": "css",
                            "nonce": undefined,
                            "prepend": undefined,
                            "tags": Array [
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                .css-fwe1lp-euiPopover-EuiPopoverClass{position:relative;vertical-align:middle;max-width:100%;display:block;}
                              </style>,
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                .css-4fdlpz-EuiPopoverClass{display:block;}
                              </style>,
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                .css-192zz00-euiLoadingSpinner-m{-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;display:inline-block;border-radius:50%;border:2px solid #D3DAE6;border-color:#07C #D3DAE6 #D3DAE6 #D3DAE6;width:16px;height:16px;border-width:calc(1px * 1.5);}
                              </style>,
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                @media screen and (prefers-reduced-motion: no-preference){.css-192zz00-euiLoadingSpinner-m{-webkit-animation:animation-c24ia8 0.6s infinite linear;animation:animation-c24ia8 0.6s infinite linear;}}
                              </style>,
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                @-webkit-keyframes animation-c24ia8{from{-webkit-transform:rotate(0deg);-moz-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(359deg);-moz-transform:rotate(359deg);-ms-transform:rotate(359deg);transform:rotate(359deg);}}
                              </style>,
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                @keyframes animation-c24ia8{from{-webkit-transform:rotate(0deg);-moz-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(359deg);-moz-transform:rotate(359deg);-ms-transform:rotate(359deg);transform:rotate(359deg);}}
                              </style>,
                            ],
                          },
                        }
                      }
                      isStringTag={true}
                      serialized={
                        Object {
                          "map": undefined,
                          "name": "4fdlpz-EuiPopoverClass",
                          "next": undefined,
                          "styles": "display: block;label:EuiPopoverClass;;;",
                          "toString": [Function],
                        }
                      }
                    />
                    <div
                      className="euiPopover__anchor css-4fdlpz-EuiPopoverClass"
                    >
                      <EuiResizeObserver
                        onResize={[Function]}
                      >
                        <div>
                          <EuiI18n
                            default="Filter options"
                            token="euiSelectable.placeholderName"
                          >
                            <EuiSelectableSearch
                              aria-activedescendant=""
                              aria-label="aria-label"
                              className="testClass1 testClass2"
                              data-test-subj="test subject string"
                              fullWidth={true}
                              inputRef={[Function]}
                              isLoading={false}
                              isPreFiltered={false}
                              key="listSearch"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onFocus={[Function]}
                              onInput={[Function]}
                              options={
                                Array [
                                  Object {
                                    "className": "euiSuggestItemOption",
                                    "data": Object {
                                      "description": "Description",
                                      "label": "Field sample",
                                      "type": Object {
                                        "color": "tint4",
                                        "iconType": "kqlField",
                                      },
                                    },
                                    "label": "Field sample",
                                    "truncate": true,
                                  },
                                  Object {
                                    "className": "euiSuggestItemOption",
                                    "data": Object {
                                      "description": "Description",
                                      "label": "Value sample",
                                      "type": Object {
                                        "color": "tint0",
                                        "iconType": "kqlValue",
                                      },
                                    },
                                    "label": "Value sample",
                                    "truncate": true,
                                  },
                                ]
                              }
                              placeholder="Filter options"
                              value=""
                            >
                              <EuiFieldSearch
                                aria-activedescendant=""
                                aria-haspopup="listbox"
                                aria-label="aria-label"
                                autoComplete="off"
                                className="euiSelectableSearch testClass1 testClass2"
                                compressed={false}
                                data-test-subj="test subject string"
                                fullWidth={true}
                                incremental={true}
                                inputRef={[Function]}
                                isClearable={true}
                                isLoading={false}
                                onBlur={[Function]}
                                onChange={[Function]}
                                onFocus={[Function]}
                                onInput={[Function]}
                                placeholder="Filter options"
                                value=""
                              >
                                <EuiFormControlLayout
                                  compressed={false}
                                  fullWidth={true}
                                  icon="search"
                                  isLoading={false}
                                >
                                  <div
                                    className="euiFormControlLayout euiFormControlLayout--fullWidth"
                                  >
                                    <div
                                      className="euiFormControlLayout__childrenWrapper"
                                    >
                                      <EuiValidatableControl>
                                        <input
                                          aria-activedescendant=""
                                          aria-haspopup="listbox"
                                          aria-label="aria-label"
                                          autoComplete="off"
                                          className="euiFieldSearch euiFieldSearch--fullWidth euiSelectableSearch testClass1 testClass2"
                                          data-test-subj="test subject string"
                                          onBlur={[Function]}
                                          onChange={[Function]}
                                          onFocus={[Function]}
                                          onInput={[Function]}
                                          onKeyUp={[Function]}
                                          placeholder="Filter options"
                                          type="search"
                                          value=""
                                        />
                                      </EuiValidatableControl>
                                      <EuiFormControlLayoutIcons
                                        compressed={false}
                                        icon="search"
                                        isLoading={false}
                                      >
                                        <div
                                          className="euiFormControlLayoutIcons"
                                        >
                                          <EuiFormControlLayoutCustomIcon
                                            size="m"
                                            type="search"
                                          >
                                            <span
                                              className="euiFormControlLayoutCustomIcon"
                                            >
                                              <EuiIcon
                                                aria-hidden="true"
                                                className="euiFormControlLayoutCustomIcon__icon"
                                                size="m"
                                                type="search"
                                              >
                                                <span
                                                  aria-hidden="true"
                                                  className="euiFormControlLayoutCustomIcon__icon"
                                                  data-euiicon-type="search"
                                                  size="m"
                                                />
                                              </EuiIcon>
                                            </span>
                                          </EuiFormControlLayoutCustomIcon>
                                        </div>
                                      </EuiFormControlLayoutIcons>
                                    </div>
                                  </div>
                                </EuiFormControlLayout>
                              </EuiFieldSearch>
                            </EuiSelectableSearch>
                          </EuiI18n>
                        </div>
                      </EuiResizeObserver>
                    </div>
                  </div>
                </div>
              </div>
            </EuiOutsideClickDetector>
          </EuiPopoverClass>
        </EuiPopover>
      </EuiInputPopover>
    </div>
  </EuiSelectable>
  <EuiScreenReaderOnly>
    <p
      className="euiScreenReaderOnly"
      id="generated-id"
    >
      State: unchanged.
    </p>
  </EuiScreenReaderOnly>
</EuiSuggest>
`;

exports[`EuiSuggest props maxHeight 1`] = `
<EuiSuggest
  aria-label="aria-label"
  className="testClass1 testClass2"
  data-test-subj="test subject string"
  maxHeight="50vh"
  suggestions={
    Array [
      Object {
        "description": "Description",
        "label": "Field sample",
        "type": Object {
          "color": "tint4",
          "iconType": "kqlField",
        },
      },
      Object {
        "description": "Description",
        "label": "Value sample",
        "type": Object {
          "color": "tint0",
          "iconType": "kqlValue",
        },
      },
    ]
  }
>
  <EuiSelectable
    height="full"
    isPreFiltered={false}
    listProps={
      Object {
        "bordered": false,
        "isVirtualized": false,
        "onFocusBadge": false,
        "paddingSize": "none",
        "showIcons": false,
        "textWrap": "wrap",
      }
    }
    onChange={[Function]}
    options={
      Array [
        Object {
          "className": "euiSuggestItemOption",
          "data": Object {
            "description": "Description",
            "label": "Field sample",
            "type": Object {
              "color": "tint4",
              "iconType": "kqlField",
            },
          },
          "label": "Field sample",
          "truncate": undefined,
        },
        Object {
          "className": "euiSuggestItemOption",
          "data": Object {
            "description": "Description",
            "label": "Value sample",
            "type": Object {
              "color": "tint0",
              "iconType": "kqlValue",
            },
          },
          "label": "Value sample",
          "truncate": undefined,
        },
      ]
    }
    renderOption={[Function]}
    searchProps={
      Object {
        "append": undefined,
        "aria-describedby": "generated-id",
        "aria-label": "aria-label",
        "aria-labelledby": undefined,
        "className": "testClass1 testClass2",
        "data-test-subj": "test subject string",
        "fullWidth": true,
        "id": undefined,
        "isLoading": false,
        "onBlur": [Function],
        "onChange": [Function],
        "onFocus": [Function],
        "onInput": [Function],
      }
    }
    searchable={true}
    singleSelection={true}
  >
    <div
      className="euiSelectable euiSelectable-fullHeight"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
    >
      <EuiInputPopover
        anchorPosition="downLeft"
        attachToAnchor={true}
        className="euiInputPopover euiInputPopover--fullWidth"
        closePopover={[Function]}
        disableFocusTrap={true}
        display="block"
        fullWidth={true}
        input={
          <React.Fragment>
            <EuiI18n
              default="Filter options"
              token="euiSelectable.placeholderName"
            >
              [Function]
            </EuiI18n>
          </React.Fragment>
        }
        isOpen={false}
        panelPaddingSize="none"
        panelProps={
          Object {
            "aria-live": undefined,
            "aria-modal": false,
            "role": undefined,
          }
        }
        panelRef={[Function]}
      >
        <EuiPopover
          anchorPosition="downLeft"
          attachToAnchor={true}
          button={
            <EuiResizeObserver
              onResize={[Function]}
            >
              [Function]
            </EuiResizeObserver>
          }
          buttonRef={[Function]}
          className="euiInputPopover euiInputPopover--fullWidth euiInputPopover euiInputPopover--fullWidth"
          closePopover={[Function]}
          display="block"
          isOpen={false}
          ownFocus={false}
          panelPaddingSize="none"
          panelProps={
            Object {
              "aria-live": undefined,
              "aria-modal": false,
              "role": undefined,
            }
          }
          panelRef={[Function]}
        >
          <EuiPopoverClass
            anchorPosition="downLeft"
            attachToAnchor={true}
            button={
              <EuiResizeObserver
                onResize={[Function]}
              >
                [Function]
              </EuiResizeObserver>
            }
            buttonRef={[Function]}
            className="euiInputPopover euiInputPopover--fullWidth euiInputPopover euiInputPopover--fullWidth"
            closePopover={[Function]}
            display="block"
            hasArrow={true}
            isOpen={false}
            ownFocus={false}
            panelPaddingSize="none"
            panelProps={
              Object {
                "aria-live": undefined,
                "aria-modal": false,
                "role": undefined,
              }
            }
            panelRef={[Function]}
            theme={
              Object {
                "colorMode": "LIGHT",
                "euiTheme": Object {
                  "animation": Object {
                    "bounce": "cubic-bezier(.34, 1.61, .7, 1)",
                    "extraFast": "90ms",
                    "extraSlow": "500ms",
                    "fast": "150ms",
                    "normal": "250ms",
                    "resistance": "cubic-bezier(.694, .0482, .335, 1)",
                    "slow": "350ms",
                  },
                  "base": 16,
                  "border": Object {
                    "color": "#D3DAE6",
                    "editable": "2px dotted #D3DAE6",
                    "radius": Object {
                      "medium": "6px",
                      "small": "4px",
                    },
                    "thick": "2px solid #D3DAE6",
                    "thin": "1px solid #D3DAE6",
                    "width": Object {
                      "thick": "2px",
                      "thin": "1px",
                    },
                  },
                  "breakpoint": Object {
                    "l": 992,
                    "m": 768,
                    "s": 575,
                    "xl": 1200,
                    "xs": 0,
                  },
                  "colors": Object {
                    "accent": "#F04E98",
                    "accentText": "#ba3d76",
                    "body": "#f7f8fc",
                    "danger": "#BD271E",
                    "dangerText": "#bd271e",
                    "darkShade": "#69707D",
                    "darkestShade": "#343741",
                    "disabled": "#ABB4C4",
                    "disabledText": "#a2abba",
                    "emptyShade": "#FFF",
                    "fullShade": "#000",
                    "ghost": "#FFF",
                    "highlight": "#fff9e8",
                    "ink": "#000",
                    "lightShade": "#D3DAE6",
                    "lightestShade": "#F1F4FA",
                    "link": "#006bb8",
                    "mediumShade": "#98A2B3",
                    "primary": "#07C",
                    "primaryText": "#006bb8",
                    "shadow": "#000",
                    "subduedText": "#646a77",
                    "success": "#00BFB3",
                    "successText": "#007871",
                    "text": "#343741",
                    "title": "#1a1c21",
                    "warning": "#FEC514",
                    "warningText": "#83650a",
                  },
                  "focus": Object {
                    "color": "currentColor",
                    "width": "2px",
                  },
                  "font": Object {
                    "baseline": 4,
                    "body": Object {
                      "scale": "s",
                      "weight": "regular",
                    },
                    "family": "'Inter', BlinkMacSystemFont, Helvetica, Arial, sans-serif",
                    "familyCode": "'Roboto Mono', Menlo, Courier, monospace",
                    "familySerif": "Georgia, Times, Times New Roman, serif",
                    "featureSettings": "'calt' 1, 'kern' 1, 'liga' 1",
                    "lineHeightMultiplier": 1.5,
                    "scale": Object {
                      "l": 1.375,
                      "m": 1,
                      "s": 0.875,
                      "xl": 1.6875,
                      "xs": 0.75,
                      "xxl": 2.125,
                      "xxs": 0.6875,
                      "xxxs": 0.5625,
                    },
                    "title": Object {
                      "weight": "bold",
                    },
                    "weight": Object {
                      "bold": 700,
                      "light": 300,
                      "medium": 500,
                      "regular": 400,
                      "semiBold": 600,
                    },
                  },
                  "levels": Object {
                    "content": 0,
                    "flyout": 1000,
                    "header": 1000,
                    "mask": 6000,
                    "maskBelowHeader": 1000,
                    "menu": 2000,
                    "modal": 8000,
                    "navigation": 6000,
                    "toast": 9000,
                  },
                  "size": Object {
                    "base": "16px",
                    "l": "24px",
                    "m": "12px",
                    "s": "8px",
                    "xl": "32px",
                    "xs": "4px",
                    "xxl": "40px",
                    "xxs": "2px",
                    "xxxl": "48px",
                    "xxxxl": "64px",
                  },
                  "themeName": "EUI_THEME_AMSTERDAM",
                },
                "modifications": Object {},
              }
            }
          >
            <EuiOutsideClickDetector
              onOutsideClick={[Function]}
            >
              <div
                css="unknown styles"
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
              >
                <Insertion
                  cache={
                    Object {
                      "insert": [Function],
                      "inserted": Object {
                        "192zz00-euiLoadingSpinner-m": true,
                        "4fdlpz-EuiPopoverClass": true,
                        "animation-c24ia8": true,
                        "fwe1lp-euiPopover-EuiPopoverClass": true,
                      },
                      "key": "css",
                      "nonce": undefined,
                      "registered": Object {},
                      "sheet": StyleSheet {
                        "_alreadyInsertedOrderInsensitiveRule": true,
                        "_insertTag": [Function],
                        "before": null,
                        "container": <head>
                          <style
                            data-emotion="css"
                            data-s=""
                          >
                            
                            .css-fwe1lp-euiPopover-EuiPopoverClass{position:relative;vertical-align:middle;max-width:100%;display:block;}
                          </style>
                          <style
                            data-emotion="css"
                            data-s=""
                          >
                            
                            .css-4fdlpz-EuiPopoverClass{display:block;}
                          </style>
                          <style
                            data-emotion="css"
                            data-s=""
                          >
                            
                            .css-192zz00-euiLoadingSpinner-m{-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;display:inline-block;border-radius:50%;border:2px solid #D3DAE6;border-color:#07C #D3DAE6 #D3DAE6 #D3DAE6;width:16px;height:16px;border-width:calc(1px * 1.5);}
                          </style>
                          <style
                            data-emotion="css"
                            data-s=""
                          >
                            
                            @media screen and (prefers-reduced-motion: no-preference){.css-192zz00-euiLoadingSpinner-m{-webkit-animation:animation-c24ia8 0.6s infinite linear;animation:animation-c24ia8 0.6s infinite linear;}}
                          </style>
                          <style
                            data-emotion="css"
                            data-s=""
                          >
                            
                            @-webkit-keyframes animation-c24ia8{from{-webkit-transform:rotate(0deg);-moz-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(359deg);-moz-transform:rotate(359deg);-ms-transform:rotate(359deg);transform:rotate(359deg);}}
                          </style>
                          <style
                            data-emotion="css"
                            data-s=""
                          >
                            
                            @keyframes animation-c24ia8{from{-webkit-transform:rotate(0deg);-moz-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(359deg);-moz-transform:rotate(359deg);-ms-transform:rotate(359deg);transform:rotate(359deg);}}
                          </style>
                        </head>,
                        "ctr": 6,
                        "insertionPoint": undefined,
                        "isSpeedy": false,
                        "key": "css",
                        "nonce": undefined,
                        "prepend": undefined,
                        "tags": Array [
                          <style
                            data-emotion="css"
                            data-s=""
                          >
                            
                            .css-fwe1lp-euiPopover-EuiPopoverClass{position:relative;vertical-align:middle;max-width:100%;display:block;}
                          </style>,
                          <style
                            data-emotion="css"
                            data-s=""
                          >
                            
                            .css-4fdlpz-EuiPopoverClass{display:block;}
                          </style>,
                          <style
                            data-emotion="css"
                            data-s=""
                          >
                            
                            .css-192zz00-euiLoadingSpinner-m{-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;display:inline-block;border-radius:50%;border:2px solid #D3DAE6;border-color:#07C #D3DAE6 #D3DAE6 #D3DAE6;width:16px;height:16px;border-width:calc(1px * 1.5);}
                          </style>,
                          <style
                            data-emotion="css"
                            data-s=""
                          >
                            
                            @media screen and (prefers-reduced-motion: no-preference){.css-192zz00-euiLoadingSpinner-m{-webkit-animation:animation-c24ia8 0.6s infinite linear;animation:animation-c24ia8 0.6s infinite linear;}}
                          </style>,
                          <style
                            data-emotion="css"
                            data-s=""
                          >
                            
                            @-webkit-keyframes animation-c24ia8{from{-webkit-transform:rotate(0deg);-moz-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(359deg);-moz-transform:rotate(359deg);-ms-transform:rotate(359deg);transform:rotate(359deg);}}
                          </style>,
                          <style
                            data-emotion="css"
                            data-s=""
                          >
                            
                            @keyframes animation-c24ia8{from{-webkit-transform:rotate(0deg);-moz-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(359deg);-moz-transform:rotate(359deg);-ms-transform:rotate(359deg);transform:rotate(359deg);}}
                          </style>,
                        ],
                      },
                    }
                  }
                  isStringTag={true}
                  serialized={
                    Object {
                      "map": undefined,
                      "name": "fwe1lp-euiPopover-EuiPopoverClass",
                      "next": undefined,
                      "styles": "position:relative;vertical-align:middle;max-width:100%;label:euiPopover;;;display: block;label:EuiPopoverClass;;;",
                      "toString": [Function],
                    }
                  }
                />
                <div
                  className="euiPopover euiInputPopover euiInputPopover--fullWidth euiInputPopover euiInputPopover--fullWidth css-fwe1lp-euiPopover-EuiPopoverClass"
                  onKeyDown={[Function]}
                  onMouseDown={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                >
                  <div
                    css="unknown styles"
                  >
                    <Insertion
                      cache={
                        Object {
                          "insert": [Function],
                          "inserted": Object {
                            "192zz00-euiLoadingSpinner-m": true,
                            "4fdlpz-EuiPopoverClass": true,
                            "animation-c24ia8": true,
                            "fwe1lp-euiPopover-EuiPopoverClass": true,
                          },
                          "key": "css",
                          "nonce": undefined,
                          "registered": Object {},
                          "sheet": StyleSheet {
                            "_alreadyInsertedOrderInsensitiveRule": true,
                            "_insertTag": [Function],
                            "before": null,
                            "container": <head>
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                .css-fwe1lp-euiPopover-EuiPopoverClass{position:relative;vertical-align:middle;max-width:100%;display:block;}
                              </style>
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                .css-4fdlpz-EuiPopoverClass{display:block;}
                              </style>
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                .css-192zz00-euiLoadingSpinner-m{-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;display:inline-block;border-radius:50%;border:2px solid #D3DAE6;border-color:#07C #D3DAE6 #D3DAE6 #D3DAE6;width:16px;height:16px;border-width:calc(1px * 1.5);}
                              </style>
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                @media screen and (prefers-reduced-motion: no-preference){.css-192zz00-euiLoadingSpinner-m{-webkit-animation:animation-c24ia8 0.6s infinite linear;animation:animation-c24ia8 0.6s infinite linear;}}
                              </style>
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                @-webkit-keyframes animation-c24ia8{from{-webkit-transform:rotate(0deg);-moz-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(359deg);-moz-transform:rotate(359deg);-ms-transform:rotate(359deg);transform:rotate(359deg);}}
                              </style>
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                @keyframes animation-c24ia8{from{-webkit-transform:rotate(0deg);-moz-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(359deg);-moz-transform:rotate(359deg);-ms-transform:rotate(359deg);transform:rotate(359deg);}}
                              </style>
                            </head>,
                            "ctr": 6,
                            "insertionPoint": undefined,
                            "isSpeedy": false,
                            "key": "css",
                            "nonce": undefined,
                            "prepend": undefined,
                            "tags": Array [
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                .css-fwe1lp-euiPopover-EuiPopoverClass{position:relative;vertical-align:middle;max-width:100%;display:block;}
                              </style>,
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                .css-4fdlpz-EuiPopoverClass{display:block;}
                              </style>,
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                .css-192zz00-euiLoadingSpinner-m{-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;display:inline-block;border-radius:50%;border:2px solid #D3DAE6;border-color:#07C #D3DAE6 #D3DAE6 #D3DAE6;width:16px;height:16px;border-width:calc(1px * 1.5);}
                              </style>,
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                @media screen and (prefers-reduced-motion: no-preference){.css-192zz00-euiLoadingSpinner-m{-webkit-animation:animation-c24ia8 0.6s infinite linear;animation:animation-c24ia8 0.6s infinite linear;}}
                              </style>,
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                @-webkit-keyframes animation-c24ia8{from{-webkit-transform:rotate(0deg);-moz-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(359deg);-moz-transform:rotate(359deg);-ms-transform:rotate(359deg);transform:rotate(359deg);}}
                              </style>,
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                @keyframes animation-c24ia8{from{-webkit-transform:rotate(0deg);-moz-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(359deg);-moz-transform:rotate(359deg);-ms-transform:rotate(359deg);transform:rotate(359deg);}}
                              </style>,
                            ],
                          },
                        }
                      }
                      isStringTag={true}
                      serialized={
                        Object {
                          "map": undefined,
                          "name": "4fdlpz-EuiPopoverClass",
                          "next": undefined,
                          "styles": "display: block;label:EuiPopoverClass;;;",
                          "toString": [Function],
                        }
                      }
                    />
                    <div
                      className="euiPopover__anchor css-4fdlpz-EuiPopoverClass"
                    >
                      <EuiResizeObserver
                        onResize={[Function]}
                      >
                        <div>
                          <EuiI18n
                            default="Filter options"
                            token="euiSelectable.placeholderName"
                          >
                            <EuiSelectableSearch
                              aria-activedescendant=""
                              aria-label="aria-label"
                              className="testClass1 testClass2"
                              data-test-subj="test subject string"
                              fullWidth={true}
                              inputRef={[Function]}
                              isLoading={false}
                              isPreFiltered={false}
                              key="listSearch"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onFocus={[Function]}
                              onInput={[Function]}
                              options={
                                Array [
                                  Object {
                                    "className": "euiSuggestItemOption",
                                    "data": Object {
                                      "description": "Description",
                                      "label": "Field sample",
                                      "type": Object {
                                        "color": "tint4",
                                        "iconType": "kqlField",
                                      },
                                    },
                                    "label": "Field sample",
                                    "truncate": undefined,
                                  },
                                  Object {
                                    "className": "euiSuggestItemOption",
                                    "data": Object {
                                      "description": "Description",
                                      "label": "Value sample",
                                      "type": Object {
                                        "color": "tint0",
                                        "iconType": "kqlValue",
                                      },
                                    },
                                    "label": "Value sample",
                                    "truncate": undefined,
                                  },
                                ]
                              }
                              placeholder="Filter options"
                              value=""
                            >
                              <EuiFieldSearch
                                aria-activedescendant=""
                                aria-haspopup="listbox"
                                aria-label="aria-label"
                                autoComplete="off"
                                className="euiSelectableSearch testClass1 testClass2"
                                compressed={false}
                                data-test-subj="test subject string"
                                fullWidth={true}
                                incremental={true}
                                inputRef={[Function]}
                                isClearable={true}
                                isLoading={false}
                                onBlur={[Function]}
                                onChange={[Function]}
                                onFocus={[Function]}
                                onInput={[Function]}
                                placeholder="Filter options"
                                value=""
                              >
                                <EuiFormControlLayout
                                  compressed={false}
                                  fullWidth={true}
                                  icon="search"
                                  isLoading={false}
                                >
                                  <div
                                    className="euiFormControlLayout euiFormControlLayout--fullWidth"
                                  >
                                    <div
                                      className="euiFormControlLayout__childrenWrapper"
                                    >
                                      <EuiValidatableControl>
                                        <input
                                          aria-activedescendant=""
                                          aria-haspopup="listbox"
                                          aria-label="aria-label"
                                          autoComplete="off"
                                          className="euiFieldSearch euiFieldSearch--fullWidth euiSelectableSearch testClass1 testClass2"
                                          data-test-subj="test subject string"
                                          onBlur={[Function]}
                                          onChange={[Function]}
                                          onFocus={[Function]}
                                          onInput={[Function]}
                                          onKeyUp={[Function]}
                                          placeholder="Filter options"
                                          type="search"
                                          value=""
                                        />
                                      </EuiValidatableControl>
                                      <EuiFormControlLayoutIcons
                                        compressed={false}
                                        icon="search"
                                        isLoading={false}
                                      >
                                        <div
                                          className="euiFormControlLayoutIcons"
                                        >
                                          <EuiFormControlLayoutCustomIcon
                                            size="m"
                                            type="search"
                                          >
                                            <span
                                              className="euiFormControlLayoutCustomIcon"
                                            >
                                              <EuiIcon
                                                aria-hidden="true"
                                                className="euiFormControlLayoutCustomIcon__icon"
                                                size="m"
                                                type="search"
                                              >
                                                <span
                                                  aria-hidden="true"
                                                  className="euiFormControlLayoutCustomIcon__icon"
                                                  data-euiicon-type="search"
                                                  size="m"
                                                />
                                              </EuiIcon>
                                            </span>
                                          </EuiFormControlLayoutCustomIcon>
                                        </div>
                                      </EuiFormControlLayoutIcons>
                                    </div>
                                  </div>
                                </EuiFormControlLayout>
                              </EuiFieldSearch>
                            </EuiSelectableSearch>
                          </EuiI18n>
                        </div>
                      </EuiResizeObserver>
                    </div>
                  </div>
                </div>
              </div>
            </EuiOutsideClickDetector>
          </EuiPopoverClass>
        </EuiPopover>
      </EuiInputPopover>
    </div>
  </EuiSelectable>
  <EuiScreenReaderOnly>
    <p
      className="euiScreenReaderOnly"
      id="generated-id"
    >
      State: unchanged.
    </p>
  </EuiScreenReaderOnly>
</EuiSuggest>
`;

exports[`EuiSuggest props options common 1`] = `
Array [
  <div
    class="euiSelectable euiSelectable-fullHeight"
  >
    <div
      class="euiPopover euiInputPopover euiInputPopover--fullWidth euiInputPopover euiInputPopover--fullWidth css-fwe1lp-euiPopover-EuiPopoverClass"
    >
      <div
        class="euiPopover__anchor css-4fdlpz-EuiPopoverClass"
      >
        <div>
          <div
            class="euiFormControlLayout euiFormControlLayout--fullWidth"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-activedescendant=""
                aria-haspopup="listbox"
                aria-label="aria-label"
                autocomplete="off"
                class="euiFieldSearch euiFieldSearch--fullWidth euiSelectableSearch testClass1 testClass2"
                data-test-subj="test subject string"
                placeholder="Filter options"
                type="search"
                value=""
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="search"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <p
    class="euiScreenReaderOnly"
    id="generated-id"
  >
    State: unchanged.
  </p>,
]
`;

exports[`EuiSuggest props options standard 1`] = `
Array [
  <div
    class="euiSelectable euiSelectable-fullHeight"
  >
    <div
      class="euiPopover euiInputPopover euiInputPopover--fullWidth euiInputPopover euiInputPopover--fullWidth css-fwe1lp-euiPopover-EuiPopoverClass"
    >
      <div
        class="euiPopover__anchor css-4fdlpz-EuiPopoverClass"
      >
        <div>
          <div
            class="euiFormControlLayout euiFormControlLayout--fullWidth"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-activedescendant=""
                aria-haspopup="listbox"
                aria-label="aria-label"
                autocomplete="off"
                class="euiFieldSearch euiFieldSearch--fullWidth euiSelectableSearch testClass1 testClass2"
                data-test-subj="test subject string"
                placeholder="Filter options"
                type="search"
                value=""
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="search"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <p
    class="euiScreenReaderOnly"
    id="generated-id"
  >
    State: unchanged.
  </p>,
]
`;

exports[`EuiSuggest props remaining EuiFieldSearch props are spread to the search input 1`] = `
Array [
  <div
    class="euiSelectable euiSelectable-fullHeight"
  >
    <div
      class="euiPopover euiInputPopover euiInputPopover css-fwe1lp-euiPopover-EuiPopoverClass"
    >
      <div
        class="euiPopover__anchor css-4fdlpz-EuiPopoverClass"
      >
        <div>
          <div
            class="euiFormControlLayout euiFormControlLayout--compressed"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-activedescendant=""
                aria-haspopup="listbox"
                aria-invalid="true"
                aria-label="aria-label"
                autocomplete="off"
                class="euiFieldSearch euiFormControlLayout--2icons euiFieldSearch--compressed euiFieldSearch-isClearable euiFieldSearch-isInvalid euiSelectableSearch testClass1 testClass2"
                data-test-subj="test subject string"
                id="testId"
                name="testName"
                placeholder="Start typing"
                type="search"
                value="Controlled value"
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="search"
                  />
                </span>
              </div>
              <div
                class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
              >
                <button
                  aria-label="Clear input"
                  class="euiFormControlLayoutClearButton euiFormControlLayoutClearButton--small"
                  data-test-subj="clearSearchButton"
                  type="button"
                >
                  <span
                    class="euiFormControlLayoutClearButton__icon"
                    data-euiicon-type="cross"
                  />
                </button>
                <span
                  color="danger"
                  data-euiicon-type="alert"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <p
    class="euiScreenReaderOnly"
    id="testId_generated-id"
  >
    State: unchanged.
  </p>,
]
`;

exports[`EuiSuggest props status status: loading is rendered 1`] = `
Array [
  <div
    class="euiSelectable euiSelectable-fullHeight"
  >
    <div
      class="euiPopover euiInputPopover euiInputPopover--fullWidth euiInputPopover euiInputPopover--fullWidth css-fwe1lp-euiPopover-EuiPopoverClass"
    >
      <div
        class="euiPopover__anchor css-4fdlpz-EuiPopoverClass"
      >
        <div>
          <div
            class="euiFormControlLayout euiFormControlLayout--fullWidth"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-activedescendant=""
                aria-haspopup="listbox"
                aria-label="aria-label"
                autocomplete="off"
                class="euiFieldSearch euiFormControlLayout--1icons euiFieldSearch--fullWidth euiFieldSearch-isLoading euiSelectableSearch testClass1 testClass2"
                data-test-subj="test subject string"
                placeholder="Filter options"
                type="search"
                value=""
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="search"
                  />
                </span>
              </div>
              <div
                class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
              >
                <span
                  aria-label="Loading"
                  class="euiLoadingSpinner css-192zz00-euiLoadingSpinner-m"
                  role="progressbar"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <p
    class="euiScreenReaderOnly"
    id="generated-id"
  >
    State: loading.
  </p>,
]
`;

exports[`EuiSuggest props status status: saved is rendered 1`] = `
Array [
  <div
    class="euiSelectable euiSelectable-fullHeight"
  >
    <div
      class="euiPopover euiInputPopover euiInputPopover--fullWidth euiInputPopover euiInputPopover--fullWidth css-fwe1lp-euiPopover-EuiPopoverClass"
    >
      <div
        class="euiPopover__anchor css-4fdlpz-EuiPopoverClass"
      >
        <div>
          <div
            class="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--group"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-activedescendant=""
                aria-haspopup="listbox"
                aria-label="aria-label"
                autocomplete="off"
                class="euiFieldSearch euiFieldSearch--fullWidth euiFieldSearch--inGroup euiSelectableSearch testClass1 testClass2"
                data-test-subj="test subject string"
                placeholder="Filter options"
                type="search"
                value=""
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="search"
                  />
                </span>
              </div>
            </div>
            <span
              class="euiToolTipAnchor"
            >
              <span
                class="euiSuggestInput__statusIcon"
                color="success"
                data-euiicon-type="checkInCircleFilled"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <p
    class="euiScreenReaderOnly"
    id="generated-id"
  >
    State: saved.
  </p>,
]
`;

exports[`EuiSuggest props status status: unchanged is rendered 1`] = `
Array [
  <div
    class="euiSelectable euiSelectable-fullHeight"
  >
    <div
      class="euiPopover euiInputPopover euiInputPopover--fullWidth euiInputPopover euiInputPopover--fullWidth css-fwe1lp-euiPopover-EuiPopoverClass"
    >
      <div
        class="euiPopover__anchor css-4fdlpz-EuiPopoverClass"
      >
        <div>
          <div
            class="euiFormControlLayout euiFormControlLayout--fullWidth"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-activedescendant=""
                aria-haspopup="listbox"
                aria-label="aria-label"
                autocomplete="off"
                class="euiFieldSearch euiFieldSearch--fullWidth euiSelectableSearch testClass1 testClass2"
                data-test-subj="test subject string"
                placeholder="Filter options"
                type="search"
                value=""
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="search"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <p
    class="euiScreenReaderOnly"
    id="generated-id"
  >
    State: unchanged.
  </p>,
]
`;

exports[`EuiSuggest props status status: unsaved is rendered 1`] = `
Array [
  <div
    class="euiSelectable euiSelectable-fullHeight"
  >
    <div
      class="euiPopover euiInputPopover euiInputPopover--fullWidth euiInputPopover euiInputPopover--fullWidth css-fwe1lp-euiPopover-EuiPopoverClass"
    >
      <div
        class="euiPopover__anchor css-4fdlpz-EuiPopoverClass"
      >
        <div>
          <div
            class="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--group"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-activedescendant=""
                aria-haspopup="listbox"
                aria-label="aria-label"
                autocomplete="off"
                class="euiFieldSearch euiFieldSearch--fullWidth euiFieldSearch--inGroup euiSelectableSearch testClass1 testClass2"
                data-test-subj="test subject string"
                placeholder="Filter options"
                type="search"
                value=""
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="search"
                  />
                </span>
              </div>
            </div>
            <span
              class="euiToolTipAnchor"
            >
              <span
                class="euiSuggestInput__statusIcon"
                color="accent"
                data-euiicon-type="dot"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <p
    class="euiScreenReaderOnly"
    id="generated-id"
  >
    State: unsaved.
  </p>,
]
`;

exports[`EuiSuggest props tooltipContent tooltipContent for status: loading is rendered 1`] = `
Array [
  <div
    class="euiSelectable euiSelectable-fullHeight"
  >
    <div
      class="euiPopover euiInputPopover euiInputPopover--fullWidth euiInputPopover euiInputPopover--fullWidth css-fwe1lp-euiPopover-EuiPopoverClass"
    >
      <div
        class="euiPopover__anchor css-4fdlpz-EuiPopoverClass"
      >
        <div>
          <div
            class="euiFormControlLayout euiFormControlLayout--fullWidth"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-activedescendant=""
                aria-haspopup="listbox"
                aria-label="aria-label"
                autocomplete="off"
                class="euiFieldSearch euiFormControlLayout--1icons euiFieldSearch--fullWidth euiFieldSearch-isLoading euiSelectableSearch testClass1 testClass2"
                data-test-subj="test subject string"
                placeholder="Filter options"
                type="search"
                value=""
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="search"
                  />
                </span>
              </div>
              <div
                class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
              >
                <span
                  aria-label="Loading"
                  class="euiLoadingSpinner css-192zz00-euiLoadingSpinner-m"
                  role="progressbar"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <p
    class="euiScreenReaderOnly"
    id="generated-id"
  >
    State: loading.
  </p>,
]
`;

exports[`EuiSuggest props tooltipContent tooltipContent for status: saved is rendered 1`] = `
Array [
  <div
    class="euiSelectable euiSelectable-fullHeight"
  >
    <div
      class="euiPopover euiInputPopover euiInputPopover--fullWidth euiInputPopover euiInputPopover--fullWidth css-fwe1lp-euiPopover-EuiPopoverClass"
    >
      <div
        class="euiPopover__anchor css-4fdlpz-EuiPopoverClass"
      >
        <div>
          <div
            class="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--group"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-activedescendant=""
                aria-haspopup="listbox"
                aria-label="aria-label"
                autocomplete="off"
                class="euiFieldSearch euiFieldSearch--fullWidth euiFieldSearch--inGroup euiSelectableSearch testClass1 testClass2"
                data-test-subj="test subject string"
                placeholder="Filter options"
                type="search"
                value=""
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="search"
                  />
                </span>
              </div>
            </div>
            <span
              class="euiToolTipAnchor"
            >
              <span
                class="euiSuggestInput__statusIcon"
                color="success"
                data-euiicon-type="checkInCircleFilled"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <p
    class="euiScreenReaderOnly"
    id="generated-id"
  >
    State: saved.
  </p>,
]
`;

exports[`EuiSuggest props tooltipContent tooltipContent for status: unchanged is rendered 1`] = `
Array [
  <div
    class="euiSelectable euiSelectable-fullHeight"
  >
    <div
      class="euiPopover euiInputPopover euiInputPopover--fullWidth euiInputPopover euiInputPopover--fullWidth css-fwe1lp-euiPopover-EuiPopoverClass"
    >
      <div
        class="euiPopover__anchor css-4fdlpz-EuiPopoverClass"
      >
        <div>
          <div
            class="euiFormControlLayout euiFormControlLayout--fullWidth"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-activedescendant=""
                aria-haspopup="listbox"
                aria-label="aria-label"
                autocomplete="off"
                class="euiFieldSearch euiFieldSearch--fullWidth euiSelectableSearch testClass1 testClass2"
                data-test-subj="test subject string"
                placeholder="Filter options"
                type="search"
                value=""
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="search"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <p
    class="euiScreenReaderOnly"
    id="generated-id"
  >
    State: unchanged.
  </p>,
]
`;

exports[`EuiSuggest props tooltipContent tooltipContent for status: unsaved is rendered 1`] = `
Array [
  <div
    class="euiSelectable euiSelectable-fullHeight"
  >
    <div
      class="euiPopover euiInputPopover euiInputPopover--fullWidth euiInputPopover euiInputPopover--fullWidth css-fwe1lp-euiPopover-EuiPopoverClass"
    >
      <div
        class="euiPopover__anchor css-4fdlpz-EuiPopoverClass"
      >
        <div>
          <div
            class="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--group"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-activedescendant=""
                aria-haspopup="listbox"
                aria-label="aria-label"
                autocomplete="off"
                class="euiFieldSearch euiFieldSearch--fullWidth euiFieldSearch--inGroup euiSelectableSearch testClass1 testClass2"
                data-test-subj="test subject string"
                placeholder="Filter options"
                type="search"
                value=""
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="search"
                  />
                </span>
              </div>
            </div>
            <span
              class="euiToolTipAnchor"
            >
              <span
                class="euiSuggestInput__statusIcon"
                color="accent"
                data-euiicon-type="dot"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <p
    class="euiScreenReaderOnly"
    id="generated-id"
  >
    State: unsaved.
  </p>,
]
`;
